--- a/app/src/main/res/layout/activity_new_list.xml
+++ b/app/src/main/res/layout/activity_new_list.xml
@@ -102,7 +102,7 @@
         android:fontFamily="@font/wotfard_regular"
         android:gravity="start|top"
         android:inputType="text"
-        android:textColor="#FF0000"
+        android:textColor="#2D2D2D"
         android:textColorHint="#838383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_add_question" />
@@ -130,7 +130,7 @@
         android:fontFamily="@font/wotfard_regular"
         android:gravity="start|top"
         android:inputType="text"
-        android:textColor="#FF0000"
+        android:textColor="#2D2D2D"
         android:textColorHint="#838383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_correct_answer" />
@@ -158,7 +158,7 @@
         android:fontFamily="@font/wotfard_regular"
         android:gravity="start|top"
         android:inputType="text"
-        android:textColor="#FF0000"
+        android:textColor="#2D2D2D"
         android:textColorHint="#838383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_answer" />
@@ -173,7 +173,7 @@
         android:fontFamily="@font/wotfard_regular"
         android:gravity="start|top"
         android:inputType="text"
-        android:textColor="#FF0000"
+        android:textColor="#2D2D2D"
         android:textColorHint="#838383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etext_answer1" />
@@ -188,7 +188,7 @@
         android:fontFamily="@font/wotfard_regular"
         android:gravity="start|top"
         android:inputType="text"
-        android:textColor="#FF0000"
+        android:textColor="#2D2D2D"
         android:textColorHint="#838383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etext_answer2" />
